# j4f

./: .gitignore  LICENSE  README.md  todo!
app_j4f/: CMakeLists.txt  CmakeLists.txt  Makefile
app_j4f/application/resources/shaders/: color_works.psh.glsl  depthpass.psh  grass.psh  grass.vsh  grass_depthpass.psh  grass_depthpass.vsh  lightFunctions.psh.glsl  mesh.psh  mesh.vsh  mesh_depthpass.gsh  mesh_depthpass.vsh  mesh_depthpass_instance.vsh  mesh_instance.psh  mesh_instance.vsh  mesh_skin.psh  mesh_skin.vsh  mesh_skin_depthpass.gsh  mesh_skin_depthpass.vsh  mesh_skin_stroke.gsh  mesh_skin_stroke.vsh  mesh_stroke.psh  mesh_stroke.vsh  plain_shadows.psh  plain_shadows.vsh  shadows_plain.psh  shadows_plain.vsh  skyBox.psh  skyBox.vsh
app_j4f/application/src/: main.cpp
app_j4f/engine_j4f/: todo
app_j4f/engine_j4f/Demo/: CMakeLists.txt
app_j4f/engine_j4f/Demo/application/src/: Application.cpp  main.cpp
app_j4f/engine_j4f/Engine/: CMakeLists.txt
app_j4f/engine_j4f/Engine/Core/: Application.h  AssetManager.h  BitMask.h  Cache.h  Common.h  Configs.h  Containers.h  Engine.cpp  Engine.h  FakeCopyable.h  Handler.h  Hash.h  Hierarchy.h  Linked_ext_ptr.h  Linked_ptr.h  Owned_ptr.h  Ref_ptr.h  Version.h  ref_ptr.h
app_j4f/engine_j4f/Engine/Core/Math/: algorithms.h  functions.h  mathematic.h
app_j4f/engine_j4f/Engine/Core/Memory/: ChunkedMemoryPool.h  MemoryChunk.h  MemoryManager.h
app_j4f/engine_j4f/Engine/Core/Threads/: FlowTask.h  Looper.h  ProgressTask.h  Synchronisations.h  TSContainers.h  Task.h  Task2.h  Task2Queue.h  TaskCommon.h  ThreadPool.h  ThreadPool2.h  Worker.h  WorkersCommutator.h
app_j4f/engine_j4f/Engine/Device/GLFW/: GLFWDevice.cpp  GLFWDevice.h
app_j4f/engine_j4f/Engine/ECS/: Component.h  Ecs.h  System.h
app_j4f/engine_j4f/Engine/Events/: Bus.h
app_j4f/engine_j4f/Engine/File/: CommonFileSystem.cpp  CommonFileSystem.h  FileManager.h  FileSystem.h
app_j4f/engine_j4f/Engine/Graphics/: Camera.cpp  Camera.h  GpuProgramsManager.cpp  GpuProgramsManager.h  Graphics.cpp  Graphics.h  RenderSurfaceInitializer.h  VertexAttributes.h
app_j4f/engine_j4f/Engine/Graphics/Animation/: ActionAnimation.h  AnimationManager.cpp  AnimationManager.h  AnimationUpdater.h  BezierEasing.h  Easings.h
app_j4f/engine_j4f/Engine/Graphics/Color/: Color.cpp  Color.h
app_j4f/engine_j4f/Engine/Graphics/Features/: Feature.h
app_j4f/engine_j4f/Engine/Graphics/Mesh/: AnimationTree.cpp  AnimationTree.h  Loader_gltf.cpp  Loader_gltf.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  MeshLoader.cpp  MeshLoader.h
app_j4f/engine_j4f/Engine/Graphics/Particles/: Particles.cpp  Particles.h
app_j4f/engine_j4f/Engine/Graphics/Plain/: Plain.cpp
app_j4f/engine_j4f/Engine/Graphics/Plane/: Plane.cpp  Plane.h
app_j4f/engine_j4f/Engine/Graphics/Render/: AutoBatchRender.cpp  AutoBatchRender.h  CommonVertexTypes.h  GpuProgramParam.h  InstanceHelper.h  RenderDescriptor.cpp  RenderDescriptor.h  RenderHelper.cpp  RenderHelper.h  RenderList.cpp  RenderList.h  RenderedEntity.h
app_j4f/engine_j4f/Engine/Graphics/Scene/: BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  Camera.h  Node.cpp  Node.h  NodeGraphicsLink.cpp  NodeGraphicsLink.h  NodeRenderListHelper.h
app_j4f/engine_j4f/Engine/Graphics/Spine/: SpineAnimation.cpp  SpineAnimation.h  SpineSkeletone.h  spine_common.cpp  spine_common.h
app_j4f/engine_j4f/Engine/Graphics/Text/: BitmapFont.cpp  BitmapFont.h  Font.cpp  Font.h  FontLoader.cpp  FontLoader.h  Label.h  TextImage.cpp  TextImage.h
app_j4f/engine_j4f/Engine/Graphics/Texture/: TextureCache.h  TextureData.cpp  TextureHandler.cpp  TextureHandler.h  TextureLoader.cpp  TextureLoader.h  TexturePtrLoader.cpp  TexturePtrLoader.h
app_j4f/engine_j4f/Engine/Graphics/Vulkan/: vkBuffer.h  vkCommandBuffer.h  vkDebugMarker.h  vkDescriptorSet.h  vkDevice.cpp  vkDevice.h  vkDynamicBuffer.h  vkFrameBuffer.h  vkGPUProgram.cpp  vkGPUProgram.h  vkHelper.h  vkImage.cpp  vkPipeline.h  vkRenderData.h  vkRenderTarget.cpp  vkRenderer.cpp  vkRenderer.h  vkSwapChain.cpp  vkTexture.cpp  vkTexture.h
app_j4f/engine_j4f/Engine/Input/: Input.h
app_j4f/engine_j4f/Engine/Log/: Log.h
app_j4f/engine_j4f/Engine/Platform/GLFW/: Platform_device.h  Platform_inc.cpp  Platform_inc.h
app_j4f/engine_j4f/Engine/Time/: Time.h  Timer.h  TimerManager.cpp  TimerManager.h
app_j4f/engine_j4f/Engine/Utils/: CpuInfo.h  HardwareInfo.h  ImGuiCameraInfo.cpp  ImGuiCameraInfo.h  ImguiStatObserver.cpp  ImguiStatObserver.h  Statistic.h  StringHelper.h  stl_helper.h
app_j4f/engine_j4f/Engine/Utils/Debug/: Assert.h  MemoryLeakChecker.cpp  MemoryLeakChecker.h
app_j4f/engine_j4f/Engine/Utils/Json/: Json.cpp  Json.h
app_j4f/engine_j4f/Tools/cmake/: utils.cmake
app_j4f/engine_j4f/Tools/glslToSpirv/: convert_with_includes_ext.py  converter_win.cmd
app_j4f/engine_j4f/Tools/glslToSpirv/spirv/: shadows_plain.psh.spv
app_j4f/engine_j4f/Tools/pngToWebp/: converter_win.cmd
app_j4f/engine_j4f/Tools/project/: make_new_project.py
app_j4f/engine_j4f/Tools/project/new_project_src/: CMakeLists.txt  Makefile
app_j4f/example/: CMakeLists.txt  Makefile
app_j4f/example/application/src/: main.cpp
app_j4f/j4f/Engine/: CMakeLists.txt  CmakeLists.txt
app_j4f/j4f/Engine/Core/: Application.h  AssetManager.h  BitMask.h  Cache.h  Common.h  Configs.h  Engine.cpp  Engine.h  EngineModule.h  Handler.h  Hash.h  Hierarchy.h  Linked_ext_ptr.h  Linked_ptr.h
app_j4f/j4f/Engine/Core/Math/: functions.h  (+4 more)
app_j4f/j4f/Engine/ECS/: BitMask.h  Component.h  Ecs.cpp  System.h
app_j4f/j4f/Engine/Events/: Bus.cpp  Bus.h
app_j4f/j4f/Engine/File/: CommonFileSystem.cpp  FileSystem.h
app_j4f/j4f/Engine/Graphics/: GpuProgramsManager.cpp  GpuProgramsManager.h  Graphics.cpp  Graphics.h  RenderSurfaceInitialisez.h
app_j4f/j4f/Engine/Input/: Input.h
app_j4f/j4f/Engine/Log/: Log.h
app_j4f/j4f/Engine/Time/: Time.h
app_j4f/j4f/Engine/Utils/: Statistic.h  StringHelper.h
app_j4f/j4f/Tools/glslToSpirv/: convert_with_includes_ext.py  converter_to_build_win.cmd  converter_win.cmd  glsl_includes_ext.py
app_j4f/j4f/Tools/project/: make_new_project.py
(+216 files in other folders)
